refactor(prerender): update prerenderTemplate function to use 'pages' instead of 'collections'
Co-authored-by: Ali Mihandoost <ali.mihandoost@gmail.com>

--- a/packages/app/src/site/layout/base-body.njk
+++ b/packages/app/src/site/layout/base-body.njk
@@ -8,7 +8,5 @@ layout: base-html
 
   {{ content | safe }}
 
-  {# {% renderFile "./content/_include/prerender.data.cjs", {
-    collections: collections.all
-  } %} #}
+  {% renderFile "./src/site/include/prerender.template.cjs", {pages: collections.all} %}
 </body>
